add tag_selector to cloud, remove toasts, add back items, slight cleaning

--- a/client/cloud.jade
+++ b/client/cloud.jade
@@ -12,8 +12,9 @@ template(name='cloud')
             .unselect_tag.ui.active.zoomer.button
                 strong #{this}
     each all_tags
-        .ui.compact.circular.basic.button.select_tag(class=cloud_tag_class) 
-            strong #{this.name}
+        +tag_selector
+        // .ui.compact.circular.basic.button.select_tag(class=cloud_tag_class) 
+        //     strong #{this.name}
 
 
 
