--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,6 +1,6 @@
 template(name='nav')
     // a.icon.ui.big.circular.icon.button(href='/')
-    .ui.fluid.attached.five.item.menu.topnav(style="background-color:#{current_user.theme_color};")
+    .ui.fluid.attached.five.item.borderless.menu.topnav
         // a.icon.header.item.pointer.toggle_leftbar
         //     i.bars.large.grey.icon
         if connected
