--- a/client/s.css
+++ b/client/s.css
@@ -19,7 +19,7 @@ body {
 }
 
 .shadowed {
-  filter: drop-shadow(0px 0px 5px grey);    
+  filter: drop-shadow(0px 0px 5px black);    
 
 }
 /*.invert > p {*/
