--- a/client/site_users.jade
+++ b/client/site_users.jade
@@ -96,11 +96,17 @@ template(name='site_users')
                                     a.ui.inline.header.say_name(href="/site/#{site}/user/#{user_id}" class=post_header_class) 
                                         |!{display_name}
                                         small #{reputation}
-                                    .ui.compact.circular.basic.button.description.set_location.pointer
+                                    .ui.compact.circular.basic.button.description.set_location.pointer.say_location
                                         +term_image                                            
                                         |!{location}
-                                    each tags
+                                    .ui.basic.label
+                                        small accessed
+                                        |{{ufrom last_access_date}}
+                                    each seven_tags
                                         .ui.small.tertiary.button #{this}
+                                    if website_url
+                                        a.ui.compact.small.basic.button(href=website_url target='_window')
+                                            |#{website_url}
                 // .four.wide.center.aligned.column
                 //     .ui.header filter
         
