--- a/client/stack_sites.jade
+++ b/client/stack_sites.jade
@@ -13,7 +13,7 @@ template(name='stack')
             .sixteen.wide.center.aligned.column
                 .ui.four.column.stackable.center.aligned.grid
                     each site_docs
-                        a.center.aligned.column.goto_site.zoomer(href="/site/#{api_site_parameter}")
+                        .center.aligned.column.pointer.goto_site.zoomer
                             // img.ui.inline.tiny.image.mobile.hiden.site.shadowed.zoomer(src=high_resolution_icon_url)
                             img.ui.inline.image.site.shadowed(src=logo_url)
                             // .header
