add blurb of truncted returned text

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -134,7 +134,7 @@ template(name='comments')
     //     i.large.info.icon
     // .ui.bottom.attached.tab.segment.bottom_rounded.active(data-tab='first')
     .ui.inline.icon.transparent.input
-        i.chat.icon
+        i.chat.outline.icon
         input.add_comment(type='text' placeholder='comment')
     if currentUser
         .ui.comments
