--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,6 +1,6 @@
 template(name='nav')
     // a.icon.ui.big.circular.icon.button(href='/')
-    .ui.fluid.attached.five.item.borderless.menu.topnav
+    .ui.fluid.attached.six.item.borderless.menu.topnav
         // a.icon.header.item.pointer.toggle_leftbar
         //     i.bars.large.grey.icon
         if connected
@@ -20,8 +20,8 @@ template(name='nav')
             //     i.large.tags.icon
             // a.icon.item.badges(href='/badges')
             //     i.large.certificate.icon
-            // a.icon.item(href='/images')
-            //     i.large.image.icon
+            a.icon.item(href='/images')
+                i.large.image.icon
             // a.icon.item(href='/videos')
             //     i.large.youtube.icon
             // a.icon.item(href='/events')
