--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -382,7 +382,7 @@ template(name='vote_button')
 
     
 template(name='voting')
-    i.thumbs.up.big.link.circular.outine.icon.upvote(class=upvote_class title='upvote')
+    i.thumbs.up.big.link.circular.outline.icon.upvote(class=upvote_class title='upvote')
     each upvoter_ids
         +user_info_small
     i.thumbs.down.big.link.circular.outline.icon.downvote(class=downvote_class title='downvote')
