--- a/client/site_users.jade
+++ b/client/site_users.jade
@@ -96,6 +96,9 @@ template(name='site_users')
                                     a.ui.inline.header.say_name(href="/site/#{site}/user/#{user_id}" class=post_header_class) 
                                         |!{display_name}
                                         small #{reputation}
+                                    strong(title="#{site} rank") ##{site_rank} 
+                                    strong(title='global rank') ##{global_rank}
+    
                                     .ui.compact.circular.basic.button.description.set_location.pointer.say_location
                                         +term_image                                            
                                         |!{location}
