--- a/client/user.jade
+++ b/client/user.jade
@@ -12,10 +12,10 @@ template(name='stackuser_page')
     with stackuser_doc
         .ui.stackable.padded.grid
             .row
-                .six.wide.right.aligned.column
+                .five.wide.right.aligned.column
                     .ui.right.header      
                         |#{site}
-                    .ui.two.item.fluid.menu
+                    .ui.two.item.fluid.large.menu
                         a.ui.basic.item.say_users(href="/site/#{site}/users")
                             i.users.icon
                             |users
@@ -50,15 +50,22 @@ template(name='stackuser_page')
                         // .item reputation #{reputation}
                         .item created {{ufrom creation_date}}
                         .item #{user_type}
-                        .item id #{user_id}
+                        .item account id #{account_id}
+                        .item user id #{user_id}
                         .item accepts #{accept_rate}%                        if website_url
                             a.item(href=website_url target="_window")
                                 i.globe.icon
                                 |#{website_url}
+                    // i.massive.loading.brown.poop.icon
                     a.ui.external.icon.button(href=link target='_window') 
                         i.linkify.icon
                         // |#{link}
-                .ten.wide.column
+                .eleven.wide.column
+                    .ui.header 
+                        i.rss.icon
+                        |feed
+                    each user_events
+                        .ui.header #{title}
                     .ui.grey.inline.header.get_question.agg
                         i.question.icon
                         |#{user_questions.count} questions
