--- a/client/s.css
+++ b/client/s.css
@@ -628,13 +628,13 @@ input {
 }
 
 .ui.header{
-    transition: all .25s ease !important;
-    /* text-transform: capitalize !important; */
-     /*font-family: 'Raleway', sans-serif !important; */
-     font-family: 'Montserrat', sans-serif !important; 
-    /*font-family: 'Roboto', sans-serif !important; */
-     /*font-family: 'Lato+Mono', sans-serif !important; */
-    /*font-family: 'Ubuntu', sans-serif !important;*/
+  transition: all .25s ease !important;
+  /* text-transform: capitalize !important; */
+  font-family: 'Raleway', sans-serif !important; 
+  /*font-family: 'Montserrat', sans-serif !important; */
+  /*font-family: 'Roboto', sans-serif !important; */
+  /*font-family: 'Lato+Mono', sans-serif !important; */
+  /*font-family: 'Ubuntu', sans-serif !important;*/
 }
 
 @keyframes fadein {
